[package]
name = "zlib_stream"
description = "An utility to decompress zlib-stream encoded WebSocket messages"
version = "0.1.0"
edition = "2018"
authors = ["Alexander Becker <bytealex@zerotwo.bot>"]
keywords = ["encoding", "gzip", "deflate", "zlib"]
categories = ["compression", "accessibility"]
license = "Apache-2.0"
repository = "https://github.com/ZeroTwo-Bot/zlib-stream-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.28"
flate2 = { version = "1.0", features = ["cloudflare_zlib"], default-features = false }

futures-util = { version = "0.3.17", optional = true }
tokio = { version = "^1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt", "macros"] }

[features]
default = ["stream"]
tokio-runtime = ["stream", "tokio"]
stream = ["futures-util"]
